@@ -59,7 +59,7 @@
 	<{$imlink.visittitle}>&nbsp;<{$imlink.icons}><{if $icms_isadmin}>&nbsp;<{$imlink.adminlink}> <{/if}>
 </div>
 
-<div style="width: 250px; float: right; padding-left: 10px; margin-left: 10px; margin-right: 5px;">
+<div style="width: 200px; float: right; padding-left: 10px; margin-left: 10px; margin-right: 5px;">
 	<div class="infoblock">
 		<b><{$smarty.const._MD_IMLINKS_SUBMITTER}>:</b>&nbsp;<{$imlink.submitter}><br />
 		<b><{$smarty.const._MD_IMLINKS_PUBLISHER}>:</b>&nbsp;<{$imlink.publisher}><br />
